<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.asteroidradar.main.MainViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background">

        <FrameLayout
            android:id="@+id/activity_main_image_of_the_day_layout"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/activity_main_image_of_the_day"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@{viewModel.pictureOfDayCaption}"
                android:scaleType="centerCrop"
                app:picOfTheDay="@{viewModel.pictureOfDay}"
                app:srcCompat="@drawable/placeholder_picture_of_day" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:contentDescription="@{viewModel.pictureOfDayCaption}"
                android:text="@string/error_unable_to_load_pod"
                android:visibility="@{viewModel.showUnsupportedMediaTypeErrorMessage}"
                tools:text="@string/error_unsupported_media_type" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="#55010613"
                android:padding="16dp"
                android:text="@string/image_of_the_day"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/asteroid_recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:asteroidList="@{viewModel.asteriods}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_main_image_of_the_day_layout"
            app:layout_constraintVertical_bias="0.0" />


        <TextView
            android:id="@+id/asteroid_error_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:textAlignment="center"
            android:textColor="@color/potentially_hazardous"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_main_image_of_the_day_layout"
            app:layout_constraintVertical_bias="0.0"
            app:showLoadingAsteriodError="@{viewModel.asteriods}"
            tools:text="@string/error_unable_to_load_list" />


        <ProgressBar
            android:id="@+id/status_loading_wheel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
